--- a/index.html
+++ b/index.html
@@ -1680,65 +1680,68 @@ function initGhStatus() {
     if (cfg.lastSync) updateLastSync(cfg.lastSync);
 }
 
-// Returns the API URL with mandatory cache-bust to always bypass CDN cache
-function ghUrl() {
+// URL limpa para PUT (GitHub rejeita query params no PUT)
+function ghUrlWrite() {
     const cfg = getGhCfg();
     if (!cfg.repo || !cfg.token) return null;
-    return `https://api.github.com/repos/${cfg.repo}/contents/${cfg.file || 'finances-data.json'}?t=${Date.now()}`;
+    return `https://api.github.com/repos/${cfg.repo}/contents/${cfg.file || 'finances-data.json'}`;
 }
-function ghHeaders() {
-    return {
+// URL com cache-bust para GET (garante dados frescos)
+function ghUrlRead() {
+    const url = ghUrlWrite();
+    return url ? `${url}?t=${Date.now()}` : null;
+}
+function ghHeaders(isWrite = false) {
+    const h = {
         'Authorization': 'token ' + getGhCfg().token,
-        'Accept': 'application/vnd.github.v3+json',
-        'Cache-Control': 'no-cache'
+        'Accept': 'application/vnd.github.v3+json'
     };
+    if (!isWrite) h['Cache-Control'] = 'no-cache';
+    if (isWrite)  h['Content-Type']  = 'application/json';
+    return h;
 }
 
-// ── Fetch current file SHA from GitHub (always fresh) ───────────────────────
-// Returns {sha, exists} — sha is null if file doesn't exist yet
+// ── Fetch current file SHA from GitHub (sempre fresco) ──────────────────────
 async function fetchCurrentSha() {
-    const res = await fetch(ghUrl(), { headers: ghHeaders() });
+    const res = await fetch(ghUrlRead(), { headers: ghHeaders() });
     if (res.status === 404) return { sha: null, exists: false };
     if (!res.ok) throw new Error('HTTP ' + res.status);
     const j = await res.json();
     return { sha: j.sha, exists: true };
 }
 
-// ── Download data from GitHub and apply locally (no upload triggered) ────────
+// ── Download dados do GitHub e aplica localmente (sem re-upload) ─────────────
 async function pullFromGitHub() {
-    const url = ghUrl();
+    const url = ghUrlRead();
     if (!url) return false;
     const res = await fetch(url, { headers: ghHeaders() });
-    if (res.status === 404) return false; // nothing to pull yet
+    if (res.status === 404) return false;
     if (!res.ok) throw new Error('HTTP ' + res.status);
     const json = await res.json();
-    const raw = JSON.parse(atob(json.content.replace(/\n/g, '')));
-    // Apply to memory + localStorage without triggering another GitHub push
+    const raw  = JSON.parse(atob(json.content.replace(/\n/g, '')));
     if (raw.t) { tx    = raw.t.map(t => ({pagamento: t.tipo==='saida'?'debito':null,...t})); localStorage.setItem('fin5_data',  JSON.stringify(tx)); }
     if (raw.c) { cats  = raw.c;  localStorage.setItem('fin5_cats',  JSON.stringify(cats)); }
     if (raw.g) { goals = raw.g;  localStorage.setItem('fin5_goals', JSON.stringify(goals)); }
     return true;
 }
 
-// ── Upload local data to GitHub ──────────────────────────────────────────────
-// Always fetches the current SHA first so it never fails with 409/422
+// ── Upload dados locais para o GitHub ────────────────────────────────────────
+// Busca o SHA atual antes de qualquer PUT, evitando 409/422
 async function pushToGitHub() {
-    const url = ghUrl();
+    const url = ghUrlWrite(); // URL limpa, sem query params
     if (!url) return;
-    const cfg = getGhCfg();
 
-    // Step 1: get the latest SHA from GitHub (required to update existing file)
+    // Pega o SHA mais recente do arquivo (necessário para sobrescrever)
     const { sha } = await fetchCurrentSha();
 
-    // Step 2: build and send the PUT
     const payload = { t: tx, c: cats, g: goals };
     const content = btoa(unescape(encodeURIComponent(JSON.stringify(payload, null, 2))));
     const body    = { message: '💰 ' + new Date().toLocaleString('pt-BR'), content };
-    if (sha) body.sha = sha; // omit sha only if file is brand-new
+    if (sha) body.sha = sha;
 
     const res = await fetch(url, {
         method: 'PUT',
-        headers: { ...ghHeaders(), 'Content-Type': 'application/json' },
+        headers: ghHeaders(true),
         body: JSON.stringify(body)
     });
     if (!res.ok) {
